Closed Bug 1875894 Opened 9 months ago Closed 8 months ago

Perma SM [tier 2] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:4425:26: error: use of undeclared identifier 'AsyncFunctionResolveKind'

Categories

(Core :: JavaScript Engine, defect, P5)

defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- unaffected
firefox123 --- unaffected
firefox124 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: anba)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: csabou [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=444182447&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/eY5ZP6lNR-eZeUDzdvDCag/runs/0/artifacts/public/logs/live_backing.log


[task 2024-01-22T18:46:14.580Z] /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o PortableBaselineInterpret.o -c  -I/builds/worker/workspace/obj-spider/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DNDEBUG=1 -DTRIMMED=1 -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/src -I/builds/worker/workspace/obj-spider/js/src -I/builds/worker/checkouts/gecko/intl/icu_capi/c/include -I/builds/worker/workspace/obj-spider/dist/include -I/builds/worker/workspace/obj-spider/dist/include/nspr -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-spider/js/src/js-confdefs.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-spider/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -Werror=format -fstandalone-debug -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/PortableBaselineInterpret.o.pp   /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp
[task 2024-01-22T18:46:14.580Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:4425:26: error: use of undeclared identifier 'AsyncFunctionResolveKind'
[task 2024-01-22T18:46:14.580Z]  4425 |       auto resolveKind = AsyncFunctionResolveKind(GET_UINT8(pc));
[task 2024-01-22T18:46:14.580Z]       |                          ^
[task 2024-01-22T18:46:14.580Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:2453:23: error: use of undeclared label 'label_AsyncReject'
[task 2024-01-22T18:46:14.581Z]  2453 |       FOR_EACH_OPCODE(OPCODE_LABEL)
[task 2024-01-22T18:46:14.581Z]       |                       ^
[task 2024-01-22T18:46:14.581Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:2453:23: error: use of undeclared label 'label_ThrowWithStack'
[task 2024-01-22T18:46:14.581Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:2453:23: error: use of undeclared label 'label_ExceptionAndStack'
[task 2024-01-22T18:46:14.581Z] 4 errors generated.
[task 2024-01-22T18:46:14.581Z] gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:689: PortableBaselineInterpret.o] Error 1
[task 2024-01-22T18:46:14.581Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/js/src'
[task 2024-01-22T18:46:14.596Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/js/src'

:anba, since you are the author of the regressor, bug 1843499, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(andrebargull)
Assignee: nobody → andrebargull
Status: NEW → ASSIGNED
Flags: needinfo?(andrebargull)

Set release status flags based on info from the regressing bug 1843499

Pushed by csabou@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/40bc63790643 Update PortableBaselineInterpreter to handle new opcodes. r=iain
Status: ASSIGNED → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: