Bug 1875894: Update PortableBaselineInterpreter to handle new opcodes. r=iain

Differential Revision: https://phabricator.services.mozilla.com/D199336